# mosquitto_plugin

./: CMakeLists.txt  README.md  mosquitto_plugin.c
cmakebuild/: CMakeCache.txt  Makefile  cmake_install.cmake
lib/: mosquitto.lib
output/: mosquitto_plugin.ilk
